# llm

./: .gitignore  README.md
node/: index.d.ts  package-lock.json  package.json  test.ts  tsconfig.json
node/tests/: basic.js
python/: pyproject.toml
rust/: Cargo.toml
rust/src/: config.rs  lib.rs  provider.rs
rust/src/bindings/: node.rs  python.rs
rust/src/models/: mod.rs  model.rs  ollama.rs  openai.rs
rust/src/models/azure/: openai.rs
rust/src/models/google/: gemini.rs
rust/tests/: provider_selection.rs
