[project]
name = "llm"
version = "0.1.0"
description = "Python bindings for multi-LLM Rust core"
authors = [{ name = "Aravind Gopal Mallapureddy", email = "aravindgopal.ag@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
module-name = "llm"
cargo-manifest-path = "../rust/Cargo.toml"
features = ["python-bindings"]
